--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+package-lock.json
 
 # BUCK
 buck-out/
@@ -58,3 +59,4 @@ buck-out/
 # CocoaPods
 /ios/Pods/
 .vscode/.react/debuggerWorker.js
+
