--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/material-top-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.1",
-    "react": "^17.0.2",
+    "react": "17.0.1",
     "react-native": "^0.64.2",
     "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -41,7 +41,7 @@
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
