--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.1",
     "react": "17.0.1",
-    "react-native": "^0.64.2",
+    "react-native": "0.64.2",
+    "react-native-btr": "^2.1.2",
     "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-open-maps": "^0.3.6",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-sqlite-storage": "^5.0.0",
+    "react-native-super-timepicker": "^1.1.6",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^8.1.0",
     "socket.io-client": "^4.1.3"
@@ -41,7 +43,8 @@
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+	"react-native-windows": "^0.64.2"
   },
   "jest": {
     "preset": "react-native"
