--- a/package.json
+++ b/package.json
@@ -12,39 +12,36 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
-    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.0.1",
-    "@react-navigation/drawer": "^6.0.1",
-    "@react-navigation/material-top-tabs": "^6.0.1",
+    "@react-native-picker/picker": "^1.16.7",
+    "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.1",
-    "@react-navigation/native-stack": "^6.0.1",
-    "react": "17.0.1",
-    "react-native": "0.64.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "react": "^17.0.1",
+    "react-native": "^0.65.1",
     "react-native-btr": "^2.1.2",
-    "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-open-maps": "^0.3.6",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.5.0",
+    "react-native-screens": "^3.6.0",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-super-timepicker": "^1.1.6",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^8.1.0",
-    "socket.io-client": "^4.1.3"
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/runtime": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/runtime": "^7.15.0",
     "@bam.tech/react-native-make": "^3.0.3",
     "@react-native-community/eslint-config": "^3.0.0",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1",
-	"react-native-windows": "^0.64.2"
+    "metro-react-native-babel-preset": "^0.66.1",
+    "react-native-windows": "^0.65.1",
+    "react-test-renderer": "^17.0.1"
   },
   "jest": {
     "preset": "react-native"
