--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react": "^17.0.1",
     "react-native": "^0.65.1",
     "react-native-btr": "^2.1.2",
+    "react-native-config": "^1.4.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.6.0",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-super-timepicker": "^1.1.6",
     "react-native-swipe-list-view": "^3.2.9",
