--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.1.0",
-    "react": "^17.0.1",
-    "react-native": "^0.65.1",
+    "react": "17.0.1",
+    "react-native": "^0.64.0",
     "react-native-btr": "^2.1.2",
     "react-native-config": "^1.4.4",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.3.0-alpha.2",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.2",
     "react-native-screens": "^3.6.0",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-super-timepicker": "^1.1.6",
     "react-native-swipe-list-view": "^3.2.9",
@@ -36,13 +37,13 @@
     "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.15.0",
     "@bam.tech/react-native-make": "^3.0.3",
-    "@react-native-community/eslint-config": "^3.0.0",
+    "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.66.1",
-    "react-native-windows": "^0.65.1",
-    "react-test-renderer": "^17.0.1"
+    "react-native-windows": "^0.64.0",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
