--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.1.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "^0.64.0",
     "react-native-btr": "^2.1.2",
