--- a/package.json
+++ b/package.json
@@ -5,46 +5,45 @@
   "scripts": {
     "server": "cd server && python ./server.py",
     "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.5",
-    "@react-native-community/checkbox": "^0.5.8",
-    "@react-native-community/datetimepicker": "^3.5.2",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^1.16.7",
-    "@react-navigation/drawer": "^6.1.0",
-    "@react-navigation/native": "^6.0.1",
-    "@react-navigation/native-stack": "^6.1.0",
-    "moment": "^2.29.1",
-    "react": "17.0.1",
-    "react-native": "^0.64.0",
-    "react-native-btr": "^2.1.2",
-    "react-native-config": "^1.4.4",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.2",
-    "react-native-screens": "^3.6.0",
+    "@react-native-async-storage/async-storage": "^1.17.9",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-masked-view/masked-view": "^0.2.7",
+    "@react-native-picker/picker": "^2.4.4",
+    "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "moment": "^2.29.4",
+    "react": "18.0.0",
+    "react-native": "0.69.4",
+    "react-native-btr": "^2.2.0",
+    "react-native-config": "^1.4.6",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-sensitive-info": "^5.5.8",
-    "react-native-sqlite-storage": "^5.0.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-super-timepicker": "^1.1.6",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-vector-icons": "^8.1.0",
-    "socket.io-client": "^4.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/runtime": "^7.15.0",
-    "@bam.tech/react-native-make": "^3.0.3",
-    "@react-native-community/eslint-config": "^3.0.1",
-    "babel-jest": "^27.0.6",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^7.32.0",
-    "jest": "^27.0.6",
-    "metro-react-native-babel-preset": "^0.66.1",
-    "react-native-windows": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.70.3",
+    "react-test-renderer": "18.0.0"
   },
   "jest": {
     "preset": "react-native"
