--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/datetimepicker": "^6.3.1",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/drawer": "^6.4.3",
@@ -29,7 +30,6 @@
     "react-native-screens": "^3.15.0",
     "react-native-sensitive-info": "^5.5.8",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-super-timepicker": "^1.1.6",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.2.0",
     "socket.io-client": "^4.5.1"
